--- a/todo.txt
+++ b/todo.txt
@@ -13,6 +13,7 @@ Add JavaDoc
 ---
 tech debt:
 
+wip should cover also unexpected exceptions
 browse stack trace in a safer way for the default StepName
 browse stack trace in a safer way for the TestUri
 pass the domain from a test to another
