--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,15 @@
-Finish Fables example working
+features:
 
-PetShop example using Commands and Query handler
+nested scenarios
+
+---
+docs:
+
+Finish Fables example working
 
 PetShop example with http4k
 
 PetShop similar example in Java
-
-Add configuration details and startup instructions to readme
-
-Add details about all the examples in readme
 
 Write blog post on how to create DDTs and what are the responsabilities of each part
 
@@ -16,12 +17,9 @@ Add JavaDoc
 
 An example with different protocols
 
-An example using Html UI
-
 ---
 tech debt:
 
-wip should cover also unexpected exceptions
+isReady should return a better error state
 browse stack trace in a safer way for the default StepName
 browse stack trace in a safer way for the TestUri
-pass the domain from a test to another
