--- a/todo.txt
+++ b/todo.txt
@@ -18,8 +18,7 @@ An example with different protocols
 ---
 tech debt:
 
-check step name params equals $ in method
+check step name params match number of $ in method
 make step name generation java friendly with snake notation
-isReady should return a better error state
 browse stack trace in a safer way for the default StepName
 browse stack trace in a safer way for the TestUri
