--- a/todo.txt
+++ b/todo.txt
@@ -26,3 +26,4 @@ check step name params match number of $ in method
 make step name generation java friendly with snake notation
 browse stack trace in a safer way for the default StepName
 browse stack trace in a safer way for the TestUri
+make safer assumptions on the source location for the SourceReference
