--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,13 @@
 features:
 
-ActorWithContext for actors steps and setting as well
-
-example with actors as receivers
-
 nested scenarios: wrapping together steps for clarity
 
 http4k support "out-of-the-box" (both client and server)
 
 ---
 docs:
+
+Example with actor context
 
 PetShop similar example in Java
 
