fail the tests if there are no protocols configured

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,8 @@ features:
 
 nested scenarios: wrapping together steps for clarity
 
+test description configurable
+
 http4k support "out-of-the-box" (both client and server)
 
 ---
