--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 features:
 
+
 make step name generation java friendly with snake notation
 
 test description configurable
@@ -7,6 +8,8 @@ test description configurable
 nested scenarios: wrapping together steps for clarity
 
 http4k support "out-of-the-box" (both client and server)
+
+specific interpreter assertions called from the actors
 
 ---
 docs:
